fix: добавлены unit-тесты + описание кода javadoc